# aircast-desktop

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  resources.qrc
assets/: AppIcon.icns
macos/: Info.plist.in
qml/: DeviceDelegate.qml  DeviceList.qml  EmptyState.qml  Header.qml  InfoBanner.qml  Link.qml  LinkText.qml  MainPage.qml  PageBackground.qml  Separator.qml  SignInPage.qml  TitleSection.qml  main.qml
qml/DevicePage/: DevicePage.qml
qml/MainPage/: DeviceDelegate.qml  DeviceList.qml  DeviceListItem.qml  EmptyState.qml  Header.qml  InfoBanner.qml  MainPage.qml  StatusBadge.qml  ThemeToggleDropdown.qml  TitleSection.qml  UserMenuDropdown.qml
qml/SignInPage/: BrandSection.qml  ProtectedByAirCast.qml  SignInCard.qml  SignInPage.qml  SignInWithGoogleButton.qml  SupportSection.qml
qml/ui/: Badge.qml  Button.qml  DropShadow.qml  Icon.qml  Theme.qml  ThemeItemDelegate.qml  TintedIcon.qml  tst_Button.qml
qml/ui/card/: Card.qml  CardContent.qml  CardDescription.qml  CardFooter.qml  CardHeader.qml  CardTitle.qml
qml/ui/dropdown/: DropdownMenu.qml  DropdownMenuContent.qml  DropdownMenuGroup.qml  DropdownMenuItem.qml  DropdownMenuLabel.qml  DropdownMenuSeparator.qml  DropdownMenuShortcut.qml  DropdownMenuSub.qml  DropdownMenuSubTrigger.qml
qml/ui/menu/: Menu.qml  MenuButton.qml  MenuItem.qml  MenuProfile.qml  MenuSeparator.qml
scripts/: .gitkeep  create-macos-build
shaders/: icon.frag
src/: AuthManager.cpp  AuthManager.h  DeviceManager.cpp  DeviceManager.h  ThemeChecker.h  ThemeManager.cpp  ThemeManager.h  devicemanager.cpp  devicemanager.h  main.cpp  widget.cpp  widget.h
